--- a/src/output.css
+++ b/src/output.css
@@ -570,6 +570,22 @@ video {
   top: 90px;
 }
 
+.mt-\[\] {
+  margin-top: ;
+}
+
+.mt-\[20px\] {
+  margin-top: 20px;
+}
+
+.mt-\[10px\] {
+  margin-top: 10px;
+}
+
+.mt-\[40px\] {
+  margin-top: 40px;
+}
+
 .flex {
   display: flex;
 }
@@ -582,12 +598,36 @@ video {
   height: 100px;
 }
 
+.h-\[200px\] {
+  height: 200px;
+}
+
 .h-\[40px\] {
   height: 40px;
 }
 
-.h-\[200px\] {
-  height: 200px;
+.h-\[500px\] {
+  height: 500px;
+}
+
+.h-\[400px\] {
+  height: 400px;
+}
+
+.h-\[550px\] {
+  height: 550px;
+}
+
+.h-\[600px\] {
+  height: 600px;
+}
+
+.h-\[900px\] {
+  height: 900px;
+}
+
+.h-\[1200px\] {
+  height: 1200px;
 }
 
 .w-\[130px\] {
@@ -598,12 +638,40 @@ video {
   width: 200px;
 }
 
+.w-\[\] {
+  width: ;
+}
+
+.w-\[500px\] {
+  width: 500px;
+}
+
+.w-\[600px\] {
+  width: 600px;
+}
+
+.w-\[100\%\] {
+  width: 100%;
+}
+
+.w-\[400px\] {
+  width: 400px;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
 .items-center {
   align-items: center;
 }
 
 .justify-between {
   justify-content: space-between;
+}
+
+.justify-evenly {
+  justify-content: space-evenly;
 }
 
 .gap-\[20px\] {
@@ -626,17 +694,68 @@ video {
   padding: 30px;
 }
 
+.p-\[20px\] {
+  padding: 20px;
+}
+
+.pl-\[3\] {
+  padding-left: 3;
+}
+
+.pl-\[60px\] {
+  padding-left: 60px;
+}
+
+.pl-\[70px\] {
+  padding-left: 70px;
+}
+
+.pl-\[80px\] {
+  padding-left: 80px;
+}
+
 .text-center {
   text-align: center;
+}
+
+.text-\[40px\] {
+  font-size: 40px;
+}
+
+.text-\[20px\] {
+  font-size: 20px;
 }
 
 .text-\[50px\] {
   font-size: 50px;
 }
 
+.font-bold {
+  font-weight: 700;
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\#505050\] {
+  --tw-text-opacity: 1;
+  color: rgb(80 80 80 / var(--tw-text-opacity, 1));
+}
+
+.text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\] {
+  color: ;
+}
+
+.text-\[\#40AD74\] {
+  --tw-text-opacity: 1;
+  color: rgb(64 173 116 / var(--tw-text-opacity, 1));
 }
 
 @media (min-width: 1024px) {
@@ -658,6 +777,18 @@ video {
 
   .lg\:w-\[300px\] {
     width: 300px;
+  }
+
+  .lg\:w-\[600px\] {
+    width: 600px;
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
+  .lg\:pl-\[80px\] {
+    padding-left: 80px;
   }
 
   .lg\:text-start {
