--- a/src/output.css
+++ b/src/output.css
@@ -570,20 +570,24 @@ video {
   top: 90px;
 }
 
-.mt-\[\] {
-  margin-top: ;
-}
-
-.mt-\[20px\] {
-  margin-top: 20px;
+.m-auto {
+  margin: auto;
 }
 
 .mt-\[10px\] {
   margin-top: 10px;
 }
 
+.mt-\[20px\] {
+  margin-top: 20px;
+}
+
 .mt-\[40px\] {
   margin-top: 40px;
+}
+
+.mt-\[30px\] {
+  margin-top: 30px;
 }
 
 .flex {
@@ -598,36 +602,36 @@ video {
   height: 100px;
 }
 
+.h-\[1200px\] {
+  height: 1200px;
+}
+
 .h-\[200px\] {
   height: 200px;
-}
-
-.h-\[40px\] {
-  height: 40px;
-}
-
-.h-\[500px\] {
-  height: 500px;
 }
 
 .h-\[400px\] {
   height: 400px;
 }
 
-.h-\[550px\] {
-  height: 550px;
+.h-\[40px\] {
+  height: 40px;
 }
 
-.h-\[600px\] {
-  height: 600px;
+.h-\[800px\] {
+  height: 800px;
 }
 
-.h-\[900px\] {
-  height: 900px;
+.h-\[700px\] {
+  height: 700px;
 }
 
-.h-\[1200px\] {
-  height: 1200px;
+.h-\[300px\] {
+  height: 300px;
+}
+
+.w-\[100\%\] {
+  width: 100%;
 }
 
 .w-\[130px\] {
@@ -638,24 +642,20 @@ video {
   width: 200px;
 }
 
-.w-\[\] {
-  width: ;
+.w-\[400px\] {
+  width: 400px;
 }
 
-.w-\[500px\] {
-  width: 500px;
+.w-\[380px\] {
+  width: 380px;
 }
 
 .w-\[600px\] {
   width: 600px;
 }
 
-.w-\[100\%\] {
-  width: 100%;
-}
-
-.w-\[400px\] {
-  width: 400px;
+.w-\[80px\] {
+  width: 80px;
 }
 
 .flex-col {
@@ -678,6 +678,14 @@ video {
   gap: 20px;
 }
 
+.gap-\[30px\] {
+  gap: 30px;
+}
+
+.gap-\[10px\] {
+  gap: 10px;
+}
+
 .rounded-\[20px\] {
   border-radius: 20px;
 }
@@ -690,53 +698,46 @@ video {
   border-style: solid;
 }
 
-.p-\[30px\] {
-  padding: 30px;
+.bg-\[\#F8F8F8\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 248 248 / var(--tw-bg-opacity, 1));
 }
 
 .p-\[20px\] {
   padding: 20px;
 }
 
-.pl-\[3\] {
-  padding-left: 3;
+.p-\[30px\] {
+  padding: 30px;
 }
 
-.pl-\[60px\] {
-  padding-left: 60px;
-}
-
-.pl-\[70px\] {
-  padding-left: 70px;
-}
-
-.pl-\[80px\] {
-  padding-left: 80px;
+.pt-\[30px\] {
+  padding-top: 30px;
 }
 
 .text-center {
   text-align: center;
 }
 
-.text-\[40px\] {
-  font-size: 40px;
+.text-\[50px\] {
+  font-size: 50px;
 }
 
 .text-\[20px\] {
   font-size: 20px;
 }
 
-.text-\[50px\] {
-  font-size: 50px;
+.text-\[30px\] {
+  font-size: 30px;
 }
 
 .font-bold {
   font-weight: 700;
 }
 
-.text-white {
+.text-\[\#40AD74\] {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+  color: rgb(64 173 116 / var(--tw-text-opacity, 1));
 }
 
 .text-\[\#505050\] {
@@ -749,13 +750,9 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity, 1));
 }
 
-.text-\[\] {
-  color: ;
-}
-
-.text-\[\#40AD74\] {
+.text-\[\#C4C4C4\] {
   --tw-text-opacity: 1;
-  color: rgb(64 173 116 / var(--tw-text-opacity, 1));
+  color: rgb(196 196 196 / var(--tw-text-opacity, 1));
 }
 
 @media (min-width: 1024px) {
@@ -775,6 +772,10 @@ video {
     height: 600px;
   }
 
+  .lg\:h-\[570px\] {
+    height: 570px;
+  }
+
   .lg\:w-\[300px\] {
     width: 300px;
   }
@@ -783,12 +784,20 @@ video {
     width: 600px;
   }
 
+  .lg\:w-\[500px\] {
+    width: 500px;
+  }
+
   .lg\:flex-row {
     flex-direction: row;
   }
 
   .lg\:pl-\[80px\] {
     padding-left: 80px;
+  }
+
+  .lg\:pl-\[150px\] {
+    padding-left: 150px;
   }
 
   .lg\:text-start {
