--- a/src/output.css
+++ b/src/output.css
@@ -610,12 +610,24 @@ video {
   display: none;
 }
 
+.h-\[700px\] {
+  height: 700px;
+}
+
 .w-\[100\%\] {
   width: 100%;
 }
 
+.w-\[200px\] {
+  width: 200px;
+}
+
 .w-\[300px\] {
   width: 300px;
+}
+
+.w-\[40px\] {
+  width: 40px;
 }
 
 .w-\[500px\] {
@@ -630,20 +642,24 @@ video {
   width: 97%;
 }
 
-.w-\[200px\] {
-  width: 200px;
-}
-
-.w-\[40px\] {
-  width: 40px;
-}
-
 .flex-col {
   flex-direction: column;
 }
 
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+.content-between {
+  align-content: space-between;
+}
+
+.items-start {
+  align-items: flex-start;
+}
+
+.items-end {
+  align-items: flex-end;
 }
 
 .items-center {
@@ -658,12 +674,12 @@ video {
   gap: 60px;
 }
 
-.rounded-\[50px\] {
-  border-radius: 50px;
-}
-
 .rounded-\[30px\] {
   border-radius: 30px;
+}
+
+.rounded-\[50px\] {
+  border-radius: 50px;
 }
 
 .border-\[1px\] {
@@ -678,14 +694,14 @@ video {
   border-style: solid;
 }
 
-.border-\[\#505050\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(80 80 80 / var(--tw-border-opacity, 1));
-}
-
 .border-\[\#40AD74\] {
   --tw-border-opacity: 1;
   border-color: rgb(64 173 116 / var(--tw-border-opacity, 1));
+}
+
+.border-\[\#505050\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(80 80 80 / var(--tw-border-opacity, 1));
 }
 
 .bg-\[\#F8F8F8\] {
@@ -698,13 +714,46 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.bg-\[url\(\.\/Images\/Rectangle5\.png\)\] {
+  background-image: url(./Images/Rectangle5.png);
+}
+
+.bg-\[url\(\.\/Images\/Rectangle6\.png\)\] {
+  background-image: url(./Images/Rectangle6.png);
+}
+
+.bg-\[linear-gradient\(to_bottom\2c rgba\(0\2c 0\2c 0\2c 0\.6\)\2c rgba\(0\2c 0\2c 0\2c 0\.6\)\)\2c url\(\.\/Images\/Rectangle6\.png\)\] {
+  background-image: linear-gradient(to bottom,rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url(./Images/Rectangle6.png);
+}
+
+.bg-\[30\%\] {
+  background-position: 30%;
+}
+
+.bg-center {
+  background-position: center;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
+}
+
 .p-\[10px\] {
   padding: 10px;
+}
+
+.p-\[30px\] {
+  padding: 30px;
 }
 
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}
+
+.px-\[40px\] {
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .py-1 {
@@ -715,11 +764,6 @@ video {
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
-}
-
-.px-\[40px\] {
-  padding-left: 40px;
-  padding-right: 40px;
 }
 
 .py-\[10px\] {
@@ -743,20 +787,28 @@ video {
   font-size: 30px;
 }
 
-.text-\[50px\] {
-  font-size: 50px;
+.text-\[45px\] {
+  font-size: 45px;
 }
 
-.font-bold {
-  font-weight: 700;
+.text-\[50px\] {
+  font-size: 50px;
 }
 
 .font-\[700\] {
   font-weight: 700;
 }
 
+.font-bold {
+  font-weight: 700;
+}
+
 .uppercase {
   text-transform: uppercase;
+}
+
+.leading-\[80px\] {
+  line-height: 80px;
 }
 
 .text-\[\#40AD74\] {
@@ -767,6 +819,15 @@ video {
 .text-\[\#C4C4C4\] {
   --tw-text-opacity: 1;
   color: rgb(196 196 196 / var(--tw-text-opacity, 1));
+}
+
+.text-\[green\] {
+  --tw-text-opacity: 1;
+  color: rgb(0 128 0 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\] {
+  color: ;
 }
 
 @media (min-width: 1024px) {
@@ -790,8 +851,57 @@ video {
     max-width: 1500px;
   }
 
+  .lg\:bg-cover {
+    background-size: cover;
+  }
+
+  .lg\:bg-center {
+    background-position: center;
+  }
+
   .lg\:p-\[20px\] {
     padding: 20px;
+  }
+
+  .lg\:pb-\[80px\] {
+    padding-bottom: 80px;
+  }
+
+  .lg\:pl-\[80px\] {
+    padding-left: 80px;
+  }
+
+  .lg\:pb-\[120px\] {
+    padding-bottom: 120px;
+  }
+
+  .lg\:pl-\[120px\] {
+    padding-left: 120px;
+  }
+
+  .lg\:pl-\[150px\] {
+    padding-left: 150px;
+  }
+
+  .lg\:pb-\[150px\] {
+    padding-bottom: 150px;
+  }
+
+  .lg\:pt-\[150px\] {
+    padding-top: 150px;
+  }
+
+  .lg\:pr-\[150px\] {
+    padding-right: 150px;
+  }
+
+  .lg\:text-\[64px\] {
+    font-size: 64px;
+  }
+
+  .lg\:text-white {
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity, 1));
   }
 }
 
