--- a/src/output.css
+++ b/src/output.css
@@ -622,6 +622,10 @@ video {
   width: 200px;
 }
 
+.w-\[20px\] {
+  width: 20px;
+}
+
 .w-\[300px\] {
   width: 300px;
 }
@@ -642,16 +646,8 @@ video {
   width: 97%;
 }
 
-.w-\[\] {
-  width: ;
-}
-
-.w-\[50px\] {
-  width: 50px;
-}
-
-.w-\[20px\] {
-  width: 20px;
+.w-\[100\] {
+  width: 100;
 }
 
 .flex-col {
@@ -678,8 +674,16 @@ video {
   justify-content: space-between;
 }
 
+.gap-\[10px\] {
+  gap: 10px;
+}
+
 .gap-\[20px\] {
   gap: 20px;
+}
+
+.gap-\[30px\] {
+  gap: 30px;
 }
 
 .gap-\[5px\] {
@@ -690,20 +694,20 @@ video {
   gap: 60px;
 }
 
-.gap-\[30px\] {
-  gap: 30px;
+.gap-\[1px\] {
+  gap: 1px;
+}
+
+.gap-\[\] {
+  gap: ;
 }
 
 .gap-\[40px\] {
   gap: 40px;
 }
 
-.gap-\[0px\] {
-  gap: 0px;
-}
-
-.gap-\[10px\] {
-  gap: 10px;
+.gap-\[3\] {
+  gap: 3;
 }
 
 .self-start {
@@ -724,6 +728,10 @@ video {
 
 .rounded-\[50px\] {
   border-radius: 50px;
+}
+
+.rounded-\[10px\] {
+  border-radius: 10px;
 }
 
 .border-\[1px\] {
@@ -756,6 +764,11 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#40AD74\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(64 173 116 / var(--tw-bg-opacity, 1));
 }
 
 .bg-\[linear-gradient\(to_bottom\2c rgba\(0\2c 0\2c 0\2c 0\.6\)\2c rgba\(0\2c 0\2c 0\2c 0\.6\)\)\2c url\(\.\/Images\/Rectangle6\.png\)\] {
@@ -807,6 +820,31 @@ video {
   padding-bottom: 10px;
 }
 
+.py-\[20px\] {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.px-\[50px\] {
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.py-\[15px\] {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.px-\[0px\] {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.px-\[70px\] {
+  padding-left: 70px;
+  padding-right: 70px;
+}
+
 .pb-\[30px\] {
   padding-bottom: 30px;
 }
@@ -827,6 +865,10 @@ video {
   font-size: 22px;
 }
 
+.text-\[24px\] {
+  font-size: 24px;
+}
+
 .text-\[30px\] {
   font-size: 30px;
 }
@@ -839,20 +881,12 @@ video {
   font-size: 50px;
 }
 
-.text-\[32px\] {
-  font-size: 32px;
+.text-\[28px\] {
+  font-size: 28px;
 }
 
-.text-\[24px\] {
-  font-size: 24px;
-}
-
-.font-\[700\] {
-  font-weight: 700;
-}
-
-.font-bold {
-  font-weight: 700;
+.text-\[18px\] {
+  font-size: 18px;
 }
 
 .font-\[300\] {
@@ -861,6 +895,14 @@ video {
 
 .font-\[600\] {
   font-weight: 600;
+}
+
+.font-\[700\] {
+  font-weight: 700;
+}
+
+.font-bold {
+  font-weight: 700;
 }
 
 .uppercase {
@@ -896,6 +938,30 @@ video {
     margin: auto;
   }
 
+  .lg\:ml-\[\] {
+    margin-left: ;
+  }
+
+  .lg\:ml-\[20px\] {
+    margin-left: 20px;
+  }
+
+  .lg\:ml-\[60px\] {
+    margin-left: 60px;
+  }
+
+  .lg\:ml-\[100px\] {
+    margin-left: 100px;
+  }
+
+  .lg\:ml-\[90px\] {
+    margin-left: 90px;
+  }
+
+  .lg\:ml-\[85px\] {
+    margin-left: 85px;
+  }
+
   .lg\:block {
     display: block;
   }
@@ -908,6 +974,10 @@ video {
     display: none;
   }
 
+  .lg\:w-\[100px\] {
+    width: 100px;
+  }
+
   .lg\:w-\[50\%\] {
     width: 50%;
   }
@@ -916,12 +986,8 @@ video {
     width: 90%;
   }
 
-  .lg\:w-\[\] {
-    width: ;
-  }
-
-  .lg\:w-\[100px\] {
-    width: 100px;
+  .lg\:w-\[100\%\] {
+    width: 100%;
   }
 
   .lg\:max-w-\[1300px\] {
@@ -956,8 +1022,28 @@ video {
     gap: 50px;
   }
 
-  .lg\:gap-\[60px\] {
-    gap: 60px;
+  .lg\:gap-\[\] {
+    gap: ;
+  }
+
+  .lg\:gap-\[600\] {
+    gap: 600;
+  }
+
+  .lg\:gap-\[600px\] {
+    gap: 600px;
+  }
+
+  .lg\:gap-\[500px\] {
+    gap: 500px;
+  }
+
+  .lg\:gap-\[0px\] {
+    gap: 0px;
+  }
+
+  .lg\:gap-\[630px\] {
+    gap: 630px;
   }
 
   .lg\:bg-cover {
@@ -989,16 +1075,16 @@ video {
     text-align: start;
   }
 
+  .lg\:text-\[32px\] {
+    font-size: 32px;
+  }
+
   .lg\:text-\[50px\] {
     font-size: 50px;
   }
 
   .lg\:text-\[64px\] {
     font-size: 64px;
-  }
-
-  .lg\:text-\[32px\] {
-    font-size: 32px;
   }
 }
 
